# governed-action-agent

./: README.md  pyproject.toml
configs/: policy.default.json  reviewers.default.json
demo/: run_governed_agent_demo.py  run_m10_release_readiness_report_demo.py  run_m11_sandboxed_code_change_demo.py  run_m12_reviewer_identity_hardening_demo.py  run_m13_hosted_receipt_viewer_local_ui_demo.py  run_m3_controlled_local_tool_demo.py  run_m4_policy_review_token_demo.py  run_m5_receipt_ledger_replay_demo.py  run_m6_hmac_signed_ledger_demo.py  run_m7_cli_packaging_demo.py  run_m8_github_pr_readonly_demo.py  run_real_agent_core_demo.py
docs/: DEPLOYMENT_PLAN.md  EVALUATOR_QUICKSTART.md  M10_RELEASE_READINESS_REPORT.md  M11_SANDBOXED_CODE_CHANGE_PROPOSALS.md  M12_REVIEWER_IDENTITY_HARDENING.md  M13_HOSTED_RECEIPT_VIEWER_LOCAL_UI.md  M14_LOCAL_RELEASE_PACKAGE_AND_PUBLIC_DEMO.md  M15_EXTERNAL_REPRODUCTION_AND_REVIEW_PACKET.md  M3_CONTROLLED_LOCAL_TOOL_BOUNDARY.md  M4_POLICY_FILE_AND_REVIEW_TOKEN.md  M5_RECEIPT_LEDGER_AND_REPLAY_VERIFIER.md  M6_HMAC_SIGNED_LEDGER_AND_KEYED_VERIFICATION.md  M7_CLI_PACKAGING_AND_PROJECT_CONFIG.md  M8_GITHUB_PR_READONLY_INTEGRATION.md  M9_EXECUTION_AUTHORIZATION_INVARIANT_HARDENING.md  PUBLIC_CLAIMS_AND_LIMITATIONS.md  PUBLIC_DEMO.md  REAL_AGENT_CORE.md  RELEASE_PACKAGE.md
examples/: sample_governed_agent_report.json  sample_governed_agent_report.md
schemas/: code_change_proposal_v0.1.schema.json  decision_envelope_v0.2.schema.json  github_pr_snapshot_v0.1.schema.json  goal_contract_v0.1.schema.json  policy_v0.1.schema.json  (+8 more)
tests/: __init__.py  (+134 more)
(+63 files in other folders)
