[project]
name = "governed-action-agent"
version = "0.1.0"
description = "Runnable local prototype of a governed AI action agent."
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
gaa = "gcr_agent.cli:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
